Correção de erro, diretório CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Alura Books</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
