--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Books</title>
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/styles/style.css">
 </head>
@@ -14,7 +13,7 @@
     <header class="cabecalho">
         <div class="container">
             <input hidden type="checkbox"" id="menu" class="container_botao">
-            <label for="menu">
+            <label for="menu" class="container_botao-checked">
                 <span class="cabecalho_menu-hamburguer container_imagem"></span>
             </label>
             <ul class="lista_menu">
@@ -40,8 +39,8 @@
         </div>
 
         <ul class="opcoes">
-            <input hidden type="checkbox" id="opcoes_menu" class="opcoes_botao">
-            <label for="opcoes_menu">
+            <input type="checkbox" id="opcoes_menu" class="opcoes_botao" hidden>
+            <label for="opcoes_menu" class="container_botao-checked">
                 <li class="opcoes_item">Categorias</li>
             </label>
 
@@ -69,9 +68,14 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img class="container_imagem container_imagem-transparente" src="assents/favoritos.svg" alt="Meus favoritos"></a>
-            <a href="#"><img class="container_imagem" src="assents/compras.svg" alt="Carrinho de compras"></a>
-            <a href="#"><img class="container_imagem" src="assents/usuario.svg" alt="Meu perfil"></a>
+            <a href="#"><img class="container_imagem container_imagem-transparente" src="assents/favoritos.svg"
+                    alt="Meus favoritos"></a>
+            <a href="#"><img class="container_imagem" src="assents/compras.svg" alt="Carrinho de compras">
+                <p class="container_texto">Minha sacola</p>
+            </a>
+            <a href="#"><img class="container_imagem" src="assents/usuario.svg" alt="Meu perfil">
+                <p class="container_texto">Meu perfil</p>
+            </a>
         </div>
     </header>
 
@@ -83,89 +87,93 @@
 
     <section class="carrossel">
         <h2 class="carrossel_titulo">Novos lançamentos</h2>
-        <!-- Slider main container -->
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+        <div class="container_swiper_card">
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
 
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="assents/gestao2.svg" alt="Livro sobre gestão do Alura Books"></div>
-                <div class="swiper-slide"><img src="assents/lideranca.svg" alt="Livro sobre liderança do Alura Books">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="assents/gestao2.svg" alt="Livro sobre gestão do Alura Books"></div>
+                    <div class="swiper-slide"><img src="assents/lideranca.svg" alt="Livro sobre liderança do Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="assents/portugol.svg" alt="Livro sobre Portugol do Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="assents/nodejs.svg" alt="Livro sobre Node.js do Alura Boooks"></div>
+                    <div class="swiper-slide"><img src="assents/tuning.svg" alt="Livro sobre Tuning do Alura Books"></div>
                 </div>
-                <div class="swiper-slide"><img src="assents/portugol.svg" alt="Livro sobre Portugol do Alura Books">
-                </div>
-                <div class="swiper-slide"><img src="assents/nodejs.svg" alt="Livro sobre Node.js do Alura Boooks"></div>
-                <div class="swiper-slide"><img src="assents/tuning.svg" alt="Livro sobre Tuning do Alura Books"></div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
 
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <div class="card_descricao">
-                <div class="descricao">
-                    <h3 class="descricao_titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao_titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descricao_texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            <div class="card">
+                <div class="card_descricao">
+                    <div class="descricao">
+                        <h3 class="descricao_titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao_titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao_texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <img class="descricao_imagem" src="assents/angular.svg" alt="Logo do Angular">
                 </div>
-                <img class="descricao_imagem" src="assents/angular.svg" alt="Logo do Angular">
-            </div>
-            <div class="card_botoes">
-                <ul class="botoes">
-                    <li class="botoes_item"><img src="assents/favoritos.svg" alt="Favoritar"></li>
-                    <li class="botoes_item"><img src="assents/compras.svg" alt="Adicionar ao carrinho"></li>
-                </ul>
-                <a class="botoes_ancora" href="#">Saiba mais</a>
+                <div class="card_botoes">
+                    <ul class="botoes">
+                        <li class="botoes_item"><img src="assents/favoritos.svg" alt="Favoritar"></li>
+                        <li class="botoes_item"><img src="assents/compras.svg" alt="Adicionar ao carrinho"></li>
+                    </ul>
+                    <a class="botoes_ancora" href="#">Saiba mais</a>
+                </div>
             </div>
         </div>
 
         <h2 class="carrossel_titulo">Mais vendidos</h2>
 
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+        <div class="container_swiper_card">
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
 
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="assents/angula11.svg" alt="Livro sobre Angular 11 do Alura Books">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="assents/angula11.svg" alt="Livro sobre Angular 11 do Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="assents/guia-frontend.svg"
+                            alt="Livro Guia de Front-end do Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="assents/javascript.svg" alt="Livro sobre JavaScript do Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="assents/acessibilidade.svg"
+                            alt="Livro sobre Acessinilidade do Alura Boooks"></div>
+                    <div class="swiper-slide"><img src="assents/mean.svg" alt="Livro sobre Mean do Alura Books"></div>
                 </div>
-                <div class="swiper-slide"><img src="assents/guia-frontend.svg"
-                        alt="Livro Guia de Front-end do Alura Books">
-                </div>
-                <div class="swiper-slide"><img src="assents/javascript.svg" alt="Livro sobre JavaScript do Alura Books">
-                </div>
-                <div class="swiper-slide"><img src="assents/acessibilidade.svg"
-                        alt="Livro sobre Acessinilidade do Alura Boooks"></div>
-                <div class="swiper-slide"><img src="assents/mean.svg" alt="Livro sobre Mean do Alura Books"></div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
 
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <div class="card_descricao">
-                <div class="descricao">
-                    <img class="descricao_imagem-estrelinha" src="assents/estrelinhas.svg" alt="Estrelinhas">
-                    <h3 class="descricao_titulo">Autora do Mês</h3>
-                    <h2 class="descricao_titulo-livro">Juliana Agarikov</h2>
-                    <p class="descricao_text-">Analista de sistemas e escritora, Juliana é especialista em Front-End.
-                    </p>
+            <div class="card">
+                <div class="card_descricao">
+                    <div class="descricao">
+                        <img class="descricao_imagem-estrelinha" src="assents/estrelinhas.svg" alt="Estrelinhas">
+                        <h3 class="descricao_titulo">Autora do Mês</h3>
+                        <h2 class="descricao_titulo-livro">Juliana Agarikov</h2>
+                        <p class="descricao_text-">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+                        </p>
+                    </div>
+                    <img class="descricao_imagem" src="assents/escritora.svg" alt="Foto da Juliana Agarikov">
                 </div>
-                <img class="descricao_imagem" src="assents/escritora.svg" alt="Foto da Juliana Agarikov">
-            </div>
-            <div class="card_botoes">
-                <ul class="botoes">
-                    <li class="botoes_item"><img src="assents/favoritos.svg" alt="Favoritar"></li>
-                    <li class="botoes_item"><img src="assents/compras.svg" alt="Adicionar ao carrinho"></li>
-                </ul>
-                <a class="botoes_ancora" href="#">Saiba mais</a>
+                <div class="card_botoes">
+                    <ul class="botoes">
+                        <li class="botoes_item"><img src="assents/favoritos.svg" alt="Favoritar"></li>
+                        <li class="botoes_item"><img src="assents/compras.svg" alt="Adicionar ao carrinho"></li>
+                    </ul>
+                    <a class="botoes_ancora" href="#">Saiba mais</a>
+                </div>
             </div>
         </div>
     </section>
@@ -301,4 +309,5 @@
         });
     </script>
 </body>
+
 </html>
